--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -68,7 +68,7 @@
     <section class="about">
         <article>
             <section id="sobre">
-                <p>Olá, meu nome é Betânia Silá e sou uma entusiasta da tecnologia, apaixonada por explorar todas
+                <p>Olá, meu nome é Betânia e sou uma entusiasta da tecnologia, apaixonada por explorar todas
                     as
                     possibilidades que o mundo digital oferece.
                     Acredito que a tecnologia tem o poder de transformar a maneira como vivemos e trabalhamos, e
