--- a/portfolio/templates/portfolio/layout.html
+++ b/portfolio/templates/portfolio/layout.html
@@ -241,7 +241,7 @@
                 <a href="#">Web</a>
                 <div class="dropdown-content">
                     <a href="{% url 'portfolio:tecnologias' %}">Tecnologias Existentes</a>
-                    <a href="{% url 'portfolio:exercicios' %}">JavaScript Calculadora</a>
+                    <a href="{% url 'portfolio:exercicios' %}">Calculadora</a>
                     <a href="#">Laboratórios</a>
                     <a href="https://www.publico.pt/">Notícias</a>
                 </div>
